--- a/.github/workflows/main_webgilson.yml
+++ b/.github/workflows/main_webgilson.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Deploy WAR app to Azure Web App - WEBClientes-APP-Gilson
+name: Build and deploy WAR app to Azure Web App - WEBGILSON
 
 on:
   push:
@@ -10,29 +10,53 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write
-
-      contents: read
+      contents: read #This is required for actions/checkout
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
+      - name: Set up Java version
+        uses: actions/setup-java@v4
+        with:
+          java-version: '8'
+          distribution: 'microsoft'
+
+      - name: Build with Maven
+        run: mvn clean install
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: java-app
+          path: '${{ github.workspace }}/target/*.war'
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build 
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: java-app
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9DA7F7F30C7D4BEC8A559BAAEDFBCE46 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_613B645CC24B43E480758C9A346021A4 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D2311C6648D44232B19744A0A9FE4A1E }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C59769B29C6B4739BFAD6B894E89A47A }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6A6F0D1BB09B42F183A2EEE0EEB8F78E }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_32A67695C4C34604AA098CD0DB7DDB79 }}
 
       - name: Deploy to Azure Web App
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'WEBGILSON'
           slot-name: 'Production'
           package: './dist/ROOT.war'
-
-
